# lumenyx

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  bootnodes.txt  lumenyx-node-v1.1.0-sha256.txt  lumenyx-setup.sh  mainnet-spec.json  rust-toolchain.toml  sha256sum.txt
.github/workflows/: release.yml
client/consensus/ghostdag/: Cargo.toml
client/consensus/ghostdag/src/: dag.rs  ghostdag.rs  lib.rs  miner.rs  ordering.rs  store.rs
crates/rx-lx/: Cargo.toml
crates/rx-lx-sys/: Cargo.toml  build.rs
crates/rx-lx-sys/src/: lib.rs
crates/rx-lx/src/: lib.rs
docs/: BOOTNODES.md  INSTALL.md  WHITEPAPER.md  WHY_LUMENYX.md  ZK_PRIVACY.md
node/: Cargo.toml  build.rs
node/src/: chain_spec.rs  cli.rs  command.rs  dag_protocol.rs  dag_sync.rs  ghostdag_select.rs  main.rs  orphan_pool.rs  pool_mode_handle.rs  pow_import.rs  rpc.rs  service.rs  service.rs.backup2  service.rs.backup_20260122_233114
node/src/chain-specs/: lumenyx-mainnet-raw.json
node/src/pool/: gossip.rs  mod.rs  pplns.rs  sharechain.rs  types.rs
node/src/rx_lx/: mod.rs  seed.rs
pallets/difficulty/: Cargo.toml
pallets/difficulty/src/: lib.rs
pallets/evm-bridge/: Cargo.toml
pallets/evm-bridge/src/: lib.rs
pallets/evm-config/: Cargo.toml
pallets/evm-config/src/: lib.rs
pallets/halving/: Cargo.toml
pallets/halving/src/: lib.rs
pallets/privacy/: Cargo.toml
pallets/privacy/src/: bn254.rs  lib.rs  zk.rs
pallets/time-rules/: Cargo.toml
pallets/time-rules/src/: lib.rs
pallets/validator-faucet/: Cargo.toml
pallets/validator-faucet/src/: lib.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
runtime/: Cargo.toml  build.rs
runtime/src/: dag_digest.rs  lib.rs
scripts/: become_validator.py  build.sh  claim_faucet.py  faucet_pow.py  generate-keys.sh  get_merkle_path.py  launch-mainnet.sh  pre-mining.sh  set_keys.py  setup.sh  shield.py  transfer.py  unshield.py
tools/zk-cli/: Cargo.toml  merkle_path.json
tools/zk-cli/src/: main.rs
