[workspace]
resolver = "2"

members = [
    "node",
    "runtime",
    "pallets/privacy",
    "pallets/halving",
    "pallets/evm-config",
    "primitives",
    "pallets/validator-faucet",
]

exclude = [
    "tools/zk-cli",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Anonymous"]
license = "MIT"

[workspace.dependencies]
codec = { package = "parity-scale-codec", version = "3.6", default-features = false }
scale-info = { version = "2.10", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = "1.0"
log = { version = "0.4", default-features = false }
clap = { version = "4.4" }
futures = "0.3"
jsonrpsee = { version = "0.22" }
hex-literal = "0.4"

# Local pallets
pallet-privacy = { path = "pallets/privacy", default-features = false }
pallet-halving = { path = "pallets/halving", default-features = false }
pallet-evm-config = { path = "pallets/evm-config", default-features = false }
lumenyx-primitives = { path = "primitives", default-features = false }

[profile.release]
panic = "unwind"
opt-level = 3
