[workspace]
resolver = "2"
members = [
    "node",
    "runtime",
    "pallets/halving",
    "pallets/difficulty",
    "pallets/time-rules",
    "primitives", "crates/rx-lx-sys", "crates/rx-lx",
]
exclude = []
[workspace.package]
version = "2.1.3"
edition = "2021"
authors = ["Anonymous"]
license = "MIT"
[workspace.dependencies]
codec = { package = "parity-scale-codec", version = "3.6", default-features = false }
scale-info = { version = "2.10", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = "1.0"
log = { version = "0.4", default-features = false }
clap = { version = "4.4" }
futures = "0.3"
jsonrpsee = { version = "0.22" }
hex-literal = "0.4"
# Local pallets
pallet-halving = { path = "pallets/halving", default-features = false }
pallet-difficulty = { path = "pallets/difficulty", default-features = false }
lumenyx-primitives = { path = "primitives", default-features = false }
[profile.release]
panic = "unwind"
opt-level = 3
