[package]
name = "lumenyx-zk-cli"
version = "1.0.0"
edition = "2021"
description = "LUMENYX ZK Privacy CLI - Generate keys and proofs"

[workspace]

[[bin]]
name = "lumenyx-zk"
path = "src/main.rs"

[dependencies]
ark-ff = "0.4"
ark-ec = "0.4"
ark-bn254 = { version = "0.4", features = ["curve"] }
ark-groth16 = "0.4"
ark-snark = "0.4"
ark-serialize = "0.4"
ark-std = "0.4"
ark-relations = "0.4"
ark-r1cs-std = "0.4"
rand = "0.8"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
