[package]
name = "sc-consensus-ghostdag"
version = "0.1.0"
edition = "2021"
description = "GHOSTDAG consensus engine for LUMENYX"

[dependencies]
# Substrate consensus
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-consensus-pow = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sp-consensus = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sp-consensus-pow = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }

# Encoding
parity-scale-codec = { version = "3.6", features = ["derive"] }
scale-info = { version = "2.10", features = ["derive"] }

# Async
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1.35", features = ["sync", "time"] }

# Crypto/hashing
blake3 = "1.5"
sha3 = "0.10"
hex = "0.4"

# Data structures
petgraph = "0.6"
parking_lot = "0.12"

# Logging
log = "0.4"
tracing = "0.1"

[features]
default = []
